--- a/SelfWebsiteAngular/src/app/menu/menu.component.html
+++ b/SelfWebsiteAngular/src/app/menu/menu.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary">
     <button mat-raised-button color="primary" [routerLink]="['resume']">Resume</button>
     <button *ngIf="IsRefreshTokenPresent()" mat-raised-button color="primary" [routerLink]="['resume-admin']">Resume Admin</button>
+    <button mat-raised-button color="primary" [routerLink]="['pixiv-links']">Pixiv Links</button>
     <span class="spacer"></span>
     <button *ngIf="IsRefreshTokenPresent()" mat-raised-button color="primary" class="logout-button" (click)="Logout()">Logout</button>
 </mat-toolbar>
